@@ -16,6 +16,7 @@ import java.net.SocketException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URLDecoder;
+import java.net.URLEncoder;
 import java.nio.ByteBuffer;
 import java.nio.CharBuffer;
 import java.nio.charset.CharacterCodingException;
@@ -66,6 +67,7 @@ import com.fsck.k9.mail.Authentication;
 import com.fsck.k9.mail.AuthenticationFailedException;
 import com.fsck.k9.mail.Body;
 import com.fsck.k9.mail.CertificateValidationException;
+import com.fsck.k9.mail.ConnectionSecurity;
 import com.fsck.k9.mail.FetchProfile;
 import com.fsck.k9.mail.Flag;
 import com.fsck.k9.mail.Folder;
@@ -75,6 +77,7 @@ import com.fsck.k9.mail.Part;
 import com.fsck.k9.mail.PushReceiver;
 import com.fsck.k9.mail.Pusher;
 import com.fsck.k9.mail.Store;
+import com.fsck.k9.mail.ServerSettings;
 import com.fsck.k9.mail.filter.EOLConvertingOutputStream;
 import com.fsck.k9.mail.filter.FixedLengthInputStream;
 import com.fsck.k9.mail.filter.PeekableInputStream;
@@ -90,6 +93,7 @@ import com.jcraft.jzlib.JZlib;
 import com.jcraft.jzlib.ZOutputStream;
 import java.util.zip.Inflater;
 import java.util.zip.InflaterInputStream;
+import org.apache.commons.io.IOUtils;
 
 /**
  * <pre>
@@ -98,6 +102,8 @@ import java.util.zip.InflaterInputStream;
  * </pre>
  */
 public class ImapStore extends Store {
+    public static final String STORE_TYPE = "IMAP";
+
     public static final int CONNECTION_SECURITY_NONE = 0;
     public static final int CONNECTION_SECURITY_TLS_OPTIONAL = 1;
     public static final int CONNECTION_SECURITY_TLS_REQUIRED = 2;
@@ -129,6 +135,217 @@ public class ImapStore extends Store {
     private static final Message[] EMPTY_MESSAGE_ARRAY = new Message[0];
 
     private static final String[] EMPTY_STRING_ARRAY = new String[0];
+
+    /**
+     * Decodes an ImapStore URI.
+     *
+     * <p>Possible forms:</p>
+     * <pre>
+     * imap://auth:user:password@server:port CONNECTION_SECURITY_NONE
+     * imap+tls://auth:user:password@server:port CONNECTION_SECURITY_TLS_OPTIONAL
+     * imap+tls+://auth:user:password@server:port CONNECTION_SECURITY_TLS_REQUIRED
+     * imap+ssl+://auth:user:password@server:port CONNECTION_SECURITY_SSL_REQUIRED
+     * imap+ssl://auth:user:password@server:port CONNECTION_SECURITY_SSL_OPTIONAL
+     * </pre>
+     */
+    public static ImapStoreSettings decodeUri(String uri) {
+        String host;
+        int port;
+        ConnectionSecurity connectionSecurity;
+        String authenticationType = null;
+        String username = null;
+        String password = null;
+        String pathPrefix = null;
+        boolean autoDetectNamespace = true;
+
+        URI imapUri;
+        try {
+            imapUri = new URI(uri);
+        } catch (URISyntaxException use) {
+            throw new IllegalArgumentException("Invalid ImapStore URI", use);
+        }
+
+        String scheme = imapUri.getScheme();
+        if (scheme.equals("imap")) {
+            connectionSecurity = ConnectionSecurity.NONE;
+            port = 143;
+        } else if (scheme.equals("imap+tls")) {
+            connectionSecurity = ConnectionSecurity.STARTTLS_OPTIONAL;
+            port = 143;
+        } else if (scheme.equals("imap+tls+")) {
+            connectionSecurity = ConnectionSecurity.STARTTLS_REQUIRED;
+            port = 143;
+        } else if (scheme.equals("imap+ssl+")) {
+            connectionSecurity = ConnectionSecurity.SSL_TLS_REQUIRED;
+            port = 993;
+        } else if (scheme.equals("imap+ssl")) {
+            connectionSecurity = ConnectionSecurity.SSL_TLS_OPTIONAL;
+            port = 993;
+        } else {
+            throw new IllegalArgumentException("Unsupported protocol (" + scheme + ")");
+        }
+
+        host = imapUri.getHost();
+
+        if (imapUri.getPort() != -1) {
+            port = imapUri.getPort();
+        }
+
+        if (imapUri.getUserInfo() != null) {
+            try {
+                String userinfo = imapUri.getUserInfo();
+                String[] userInfoParts = userinfo.split(":");
+
+                if (userinfo.endsWith(":")) {
+                    // Password is empty. This can only happen after an account was imported.
+                    authenticationType = AuthType.valueOf(userInfoParts[0]).name();
+                    username = URLDecoder.decode(userInfoParts[1], "UTF-8");
+                } else if (userInfoParts.length == 2) {
+                    authenticationType = AuthType.PLAIN.name();
+                    username = URLDecoder.decode(userInfoParts[0], "UTF-8");
+                    password = URLDecoder.decode(userInfoParts[1], "UTF-8");
+                } else {
+                    authenticationType = AuthType.valueOf(userInfoParts[0]).name();
+                    username = URLDecoder.decode(userInfoParts[1], "UTF-8");
+                    password = URLDecoder.decode(userInfoParts[2], "UTF-8");
+                }
+            } catch (UnsupportedEncodingException enc) {
+                // This shouldn't happen since the encoding is hardcoded to UTF-8
+                throw new IllegalArgumentException("Couldn't urldecode username or password.", enc);
+            }
+        }
+
+        String path = imapUri.getPath();
+        if (path != null && path.length() > 1) {
+            // Strip off the leading "/"
+            String cleanPath = path.substring(1);
+
+            if (cleanPath.length() >= 2 && cleanPath.charAt(1) == '|') {
+                autoDetectNamespace = cleanPath.charAt(0) == '1';
+                if (!autoDetectNamespace) {
+                    pathPrefix = cleanPath.substring(2);
+                }
+            } else {
+                if (cleanPath.length() > 0) {
+                    pathPrefix = cleanPath;
+                    autoDetectNamespace = false;
+                }
+            }
+        }
+
+        return new ImapStoreSettings(host, port, connectionSecurity, authenticationType, username,
+                password, autoDetectNamespace, pathPrefix);
+    }
+
+    /**
+     * Creates an ImapStore URI with the supplied settings.
+     *
+     * @param server
+     *         The {@link ServerSettings} object that holds the server settings.
+     *
+     * @return An ImapStore URI that holds the same information as the {@code server} parameter.
+     *
+     * @see Account#getStoreUri()
+     * @see ImapStore#decodeUri(String)
+     */
+    public static String createUri(ServerSettings server) {
+        String userEnc;
+        String passwordEnc;
+        try {
+            userEnc = URLEncoder.encode(server.username, "UTF-8");
+            passwordEnc = (server.password != null) ?
+                    URLEncoder.encode(server.password, "UTF-8") : "";
+        }
+        catch (UnsupportedEncodingException e) {
+            throw new IllegalArgumentException("Could not encode username or password", e);
+        }
+
+        String scheme;
+        switch (server.connectionSecurity) {
+            case SSL_TLS_OPTIONAL:
+                scheme = "imap+ssl";
+                break;
+            case SSL_TLS_REQUIRED:
+                scheme = "imap+ssl+";
+                break;
+            case STARTTLS_OPTIONAL:
+                scheme = "imap+tls";
+                break;
+            case STARTTLS_REQUIRED:
+                scheme = "imap+tls+";
+                break;
+            default:
+            case NONE:
+                scheme = "imap";
+                break;
+        }
+
+        AuthType authType;
+        try {
+            authType = AuthType.valueOf(server.authenticationType);
+        } catch (Exception e) {
+            throw new IllegalArgumentException("Invalid authentication type: " +
+                    server.authenticationType);
+        }
+
+        String userInfo = authType.toString() + ":" + userEnc + ":" + passwordEnc;
+        try {
+            Map<String, String> extra = server.getExtra();
+            String path = null;
+            if (extra != null) {
+                boolean autoDetectNamespace = Boolean.TRUE.toString().equals(
+                        extra.get(ImapStoreSettings.AUTODETECT_NAMESPACE_KEY));
+                String pathPrefix = (autoDetectNamespace) ?
+                        null : extra.get(ImapStoreSettings.PATH_PREFIX_KEY);
+                path = "/" + (autoDetectNamespace ? "1" : "0") + "|" +
+                    ((pathPrefix == null) ? "" : pathPrefix);
+            } else {
+                path = "/1|";
+            }
+            return new URI(scheme, userInfo, server.host, server.port,
+                path,
+                null, null).toString();
+        } catch (URISyntaxException e) {
+            throw new IllegalArgumentException("Can't create ImapStore URI", e);
+        }
+    }
+
+    /**
+     * This class is used to store the decoded contents of an ImapStore URI.
+     *
+     * @see ImapStore#decodeUri(String)
+     */
+    public static class ImapStoreSettings extends ServerSettings {
+        public static final String AUTODETECT_NAMESPACE_KEY = "autoDetectNamespace";
+        public static final String PATH_PREFIX_KEY = "pathPrefix";
+
+        public final boolean autoDetectNamespace;
+        public final String pathPrefix;
+
+        protected ImapStoreSettings(String host, int port, ConnectionSecurity connectionSecurity,
+                String authenticationType, String username, String password,
+                boolean autodetectNamespace, String pathPrefix) {
+            super(STORE_TYPE, host, port, connectionSecurity, authenticationType, username,
+                    password);
+            this.autoDetectNamespace = autodetectNamespace;
+            this.pathPrefix = pathPrefix;
+        }
+
+        @Override
+        public Map<String, String> getExtra() {
+            Map<String, String> extra = new HashMap<String, String>();
+            extra.put(AUTODETECT_NAMESPACE_KEY, Boolean.valueOf(autoDetectNamespace).toString());
+            putIfNotNull(extra, PATH_PREFIX_KEY, pathPrefix);
+            return extra;
+        }
+
+        @Override
+        public ServerSettings newPassword(String newPassword) {
+            return new ImapStoreSettings(host, port, connectionSecurity, authenticationType,
+                    username, newPassword, autoDetectNamespace, pathPrefix);
+        }
+    }
+
 
     private String mHost;
     private int mPort;
@@ -227,74 +444,43 @@ public class ImapStore extends Store {
      */
     private HashMap<String, ImapFolder> mFolderCache = new HashMap<String, ImapFolder>();
 
-    /**
-     * imap://auth:user:password@server:port CONNECTION_SECURITY_NONE
-     * imap+tls://auth:user:password@server:port CONNECTION_SECURITY_TLS_OPTIONAL
-     * imap+tls+://auth:user:password@server:port CONNECTION_SECURITY_TLS_REQUIRED
-     * imap+ssl+://auth:user:password@server:port CONNECTION_SECURITY_SSL_REQUIRED
-     * imap+ssl://auth:user:password@server:port CONNECTION_SECURITY_SSL_OPTIONAL
-     *
-     * @param _uri
-     */
     public ImapStore(Account account) throws MessagingException {
         super(account);
-        URI uri;
+
+        ImapStoreSettings settings;
         try {
-            uri = new URI(mAccount.getStoreUri());
-        } catch (URISyntaxException use) {
-            throw new MessagingException("Invalid ImapStore URI", use);
+            settings = decodeUri(mAccount.getStoreUri());
+        } catch (IllegalArgumentException e) {
+            throw new MessagingException("Error while decoding store URI", e);
         }
 
-        String scheme = uri.getScheme();
-        if (scheme.equals("imap")) {
+        mHost = settings.host;
+        mPort = settings.port;
+
+        switch (settings.connectionSecurity) {
+        case NONE:
             mConnectionSecurity = CONNECTION_SECURITY_NONE;
-            mPort = 143;
-        } else if (scheme.equals("imap+tls")) {
+            break;
+        case STARTTLS_OPTIONAL:
             mConnectionSecurity = CONNECTION_SECURITY_TLS_OPTIONAL;
-            mPort = 143;
-        } else if (scheme.equals("imap+tls+")) {
+            break;
+        case STARTTLS_REQUIRED:
             mConnectionSecurity = CONNECTION_SECURITY_TLS_REQUIRED;
-            mPort = 143;
-        } else if (scheme.equals("imap+ssl+")) {
-            mConnectionSecurity = CONNECTION_SECURITY_SSL_REQUIRED;
-            mPort = 993;
-        } else if (scheme.equals("imap+ssl")) {
+            break;
+        case SSL_TLS_OPTIONAL:
             mConnectionSecurity = CONNECTION_SECURITY_SSL_OPTIONAL;
-            mPort = 993;
-        } else {
-            throw new MessagingException("Unsupported protocol");
+            break;
+        case SSL_TLS_REQUIRED:
+            mConnectionSecurity = CONNECTION_SECURITY_SSL_REQUIRED;
+            break;
         }
 
-        mHost = uri.getHost();
+        mAuthType = AuthType.valueOf(settings.authenticationType);
+        mUsername = settings.username;
+        mPassword = settings.password;
 
-        if (uri.getPort() != -1) {
-            mPort = uri.getPort();
-        }
-
-        if (uri.getUserInfo() != null) {
-            try {
-                String[] userInfoParts = uri.getUserInfo().split(":");
-                if (userInfoParts.length == 2) {
-                    mAuthType = AuthType.PLAIN;
-                    mUsername = URLDecoder.decode(userInfoParts[0], "UTF-8");
-                    mPassword = URLDecoder.decode(userInfoParts[1], "UTF-8");
-                } else {
-                    mAuthType = AuthType.valueOf(userInfoParts[0]);
-                    mUsername = URLDecoder.decode(userInfoParts[1], "UTF-8");
-                    mPassword = URLDecoder.decode(userInfoParts[2], "UTF-8");
-                }
-            } catch (UnsupportedEncodingException enc) {
-                // This shouldn't happen since the encoding is hardcoded to UTF-8
-                Log.e(K9.LOG_TAG, "Couldn't urldecode username or password.", enc);
-            }
-        }
-
-        if ((uri.getPath() != null) && (uri.getPath().length() > 0)) {
-            mPathPrefix = uri.getPath().substring(1);
-            if (mPathPrefix != null && mPathPrefix.trim().length() == 0) {
-                mPathPrefix = null;
-            }
-        }
+        // Make extra sure mPathPrefix is null if "auto-detect namespace" is configured
+        mPathPrefix = (settings.autoDetectNamespace) ? null : settings.pathPrefix;
 
         mModifiedUtf7Charset = new CharsetProvider().charsetForName("X-RFC-3501");
     }
@@ -370,7 +556,7 @@ public class ImapStore extends Store {
         LinkedList<Folder> folders = new LinkedList<Folder>();
 
         List<ImapResponse> responses =
-            connection.executeSimpleCommand(String.format(commandResponse + " \"\" %s",
+            connection.executeSimpleCommand(String.format("%s \"\" %s", commandResponse,
                                             encodeString(getCombinedPrefix() + "*")));
 
         for (ImapResponse response : responses) {
@@ -437,11 +623,81 @@ public class ImapStore extends Store {
 
     }
 
+    /**
+     * Attempt to auto-configure folders by attributes if the server advertises that capability.
+     *
+     * The parsing here is essentially the same as
+     * {@link #listFolders(com.fsck.k9.mail.store.ImapStore.ImapConnection, boolean)}; we should try to consolidate
+     * this at some point. :(
+     * @param connection IMAP Connection
+     * @throws IOException uh oh!
+     * @throws MessagingException uh oh!
+     */
+    private void autoconfigureFolders(final ImapConnection connection) throws IOException, MessagingException {
+        String commandResponse = null;
+        String commandOptions = "";
+
+        if (connection.capabilities.contains("XLIST")) {
+            if (K9.DEBUG) Log.d(K9.LOG_TAG, "Folder auto-configuration: Using XLIST.");
+            commandResponse = "XLIST";
+        } else if(connection.capabilities.contains("SPECIAL-USE")) {
+            if (K9.DEBUG) Log.d(K9.LOG_TAG, "Folder auto-configuration: Using RFC6154/SPECIAL-USE.");
+            commandResponse = "LIST";
+            commandOptions = " (SPECIAL-USE)";
+        } else {
+            if (K9.DEBUG) Log.d(K9.LOG_TAG, "No detected folder auto-configuration methods.");
+            return;
+        }
+
+        final List<ImapResponse> responses =
+            connection.executeSimpleCommand(String.format("%s%s \"\" %s", commandResponse, commandOptions,
+                encodeString(getCombinedPrefix() + "*")));
+
+        for (ImapResponse response : responses) {
+            if (ImapResponseParser.equalsIgnoreCase(response.get(0), commandResponse)) {
+
+                String decodedFolderName;
+                try {
+                    decodedFolderName = decodeFolderName(response.getString(3));
+                } catch (CharacterCodingException e) {
+                    Log.w(K9.LOG_TAG, "Folder name not correctly encoded with the UTF-7 variant " +
+                        "as defined by RFC 3501: " + response.getString(3), e);
+                    // We currently just skip folders with malformed names.
+                    continue;
+                }
+
+                if (mPathDelimeter == null) {
+                    mPathDelimeter = response.getString(2);
+                    mCombinedPrefix = null;
+                }
+
+                ImapList attributes = response.getList(1);
+                for (int i = 0, count = attributes.size(); i < count; i++) {
+                    String attribute = attributes.getString(i);
+                    if (attribute.equals("\\Drafts")) {
+                        mAccount.setDraftsFolderName(decodedFolderName);
+                        if (K9.DEBUG) Log.d(K9.LOG_TAG, "Folder auto-configuration detected draft folder: " + decodedFolderName);
+                    } else if (attribute.equals("\\Sent")) {
+                        mAccount.setSentFolderName(decodedFolderName);
+                        if (K9.DEBUG) Log.d(K9.LOG_TAG, "Folder auto-configuration detected sent folder: " + decodedFolderName);
+                    } else if (attribute.equals("\\Spam")) {
+                        mAccount.setSpamFolderName(decodedFolderName);
+                        if (K9.DEBUG) Log.d(K9.LOG_TAG, "Folder auto-configuration detected spam folder: " + decodedFolderName);
+                    } else if (attribute.equals("\\Trash")) {
+                        mAccount.setTrashFolderName(decodedFolderName);
+                        if (K9.DEBUG) Log.d(K9.LOG_TAG, "Folder auto-configuration detected trash folder: " + decodedFolderName);
+                    }
+                }
+            }
+        }
+    }
+
     @Override
     public void checkSettings() throws MessagingException {
         try {
             ImapConnection connection = new ImapConnection(new StoreImapSettings());
             connection.open();
+            autoconfigureFolders(connection);
             connection.close();
         } catch (IOException ioe) {
             throw new MessagingException(K9.app.getString(R.string.error_unable_to_connect), ioe);
@@ -638,7 +894,7 @@ public class ImapStore extends Store {
             // 2 OK [READ-WRITE] Select completed.
             try {
                 msgSeqUidMap.clear();
-                String command = String.format((mode == OpenMode.READ_WRITE ? "SELECT" : "EXAMINE") + " %s",
+                String command = String.format("%s %s", mode == OpenMode.READ_WRITE ? "SELECT" : "EXAMINE",
                                                encodeString(encodeFolderName(getPrefixedName())));
 
                 List<ImapResponse> responses = executeSimpleCommand(command);
@@ -655,7 +911,7 @@ public class ImapStore extends Store {
                         if (bracketedObj instanceof ImapList) {
                             ImapList bracketed = (ImapList)bracketedObj;
 
-                            if (bracketed.size() > 0) {
+                            if (!bracketed.isEmpty()) {
                                 Object keyObj = bracketed.get(0);
                                 if (keyObj instanceof String) {
                                     String key = (String)keyObj;
@@ -895,7 +1151,7 @@ public class ImapStore extends Store {
                 int count = 0;
                 int start = 1;
 
-                List<ImapResponse> responses = executeSimpleCommand(String.format("SEARCH %d:* " + criteria, start));
+                List<ImapResponse> responses = executeSimpleCommand(String.format("SEARCH %d:* %s", start, criteria));
                 for (ImapResponse response : responses) {
                     if (ImapResponseParser.equalsIgnoreCase(response.get(0), "SEARCH")) {
                         count += response.size() - 1;
@@ -972,7 +1228,7 @@ public class ImapStore extends Store {
 
             ImapSearcher searcher = new ImapSearcher() {
                 public List<ImapResponse> search() throws IOException, MessagingException {
-                    return executeSimpleCommand(String.format("UID SEARCH %d:%d%s" + (includeDeleted ? "" : " NOT DELETED"), start, end, dateSearchString));
+                    return executeSimpleCommand(String.format("UID SEARCH %d:%d%s%s", start, end, dateSearchString, includeDeleted ? "" : " NOT DELETED"));
                 }
             };
             return search(searcher, listener);
@@ -982,7 +1238,7 @@ public class ImapStore extends Store {
         throws MessagingException {
             ImapSearcher searcher = new ImapSearcher() {
                 public List<ImapResponse> search() throws IOException, MessagingException {
-                    return executeSimpleCommand(String.format("UID SEARCH %s" + (includeDeleted ? "" : " NOT DELETED"), Utility.combine(mesgSeqs.toArray(), ',')));
+                    return executeSimpleCommand(String.format("UID SEARCH %s%s", Utility.combine(mesgSeqs.toArray(), ','), includeDeleted ? "" : " NOT DELETED"));
                 }
             };
             return search(searcher, listener);
@@ -992,7 +1248,7 @@ public class ImapStore extends Store {
         throws MessagingException {
             ImapSearcher searcher = new ImapSearcher() {
                 public List<ImapResponse> search() throws IOException, MessagingException {
-                    return executeSimpleCommand(String.format("UID SEARCH UID %s" + (includeDeleted ? "" : " NOT DELETED"), Utility.combine(mesgUids.toArray(), ',')));
+                    return executeSimpleCommand(String.format("UID SEARCH UID %s%s", Utility.combine(mesgUids.toArray(), ','), includeDeleted ? "" : " NOT DELETED"));
                 }
             };
             return search(searcher, listener);
@@ -1409,7 +1665,7 @@ public class ImapStore extends Store {
 //                {
 //                    ImapList bracketed = (ImapList)bracketedObj;
 //
-//                    if (bracketed.size() > 0)
+//                    if (!bracketed.isEmpty())
 //                    {
 //                        Object keyObj = bracketed.get(0);
 //                        if (keyObj instanceof String)
@@ -1417,7 +1673,7 @@ public class ImapStore extends Store {
 //                            String key = (String)keyObj;
 //                            if ("ALERT".equalsIgnoreCase(key))
 //                            {
-//                                StringBuffer sb = new StringBuffer();
+//                                StringBuilder sb = new StringBuilder();
 //                                for (int i = 2, count = response.size(); i < count; i++) {
 //                                    sb.append(response.get(i).toString());
 //                                    sb.append(' ');
@@ -1461,7 +1717,7 @@ public class ImapStore extends Store {
                          * what type it is and bail out.
                          */
                         String subType = bs.getString(i);
-                        mp.setSubType(subType.toLowerCase());
+                        mp.setSubType(subType.toLowerCase(Locale.US));
                         break;
                     }
                 }
@@ -1490,7 +1746,7 @@ public class ImapStore extends Store {
 
                 String type = bs.getString(0);
                 String subType = bs.getString(1);
-                String mimeType = (type + "/" + subType).toLowerCase();
+                String mimeType = (type + "/" + subType).toLowerCase(Locale.US);
 
                 ImapList bodyParams = null;
                 if (bs.get(2) instanceof ImapList) {
@@ -1514,7 +1770,8 @@ public class ImapStore extends Store {
                 /*
                  * Set the content type with as much information as we know right now.
                  */
-                String contentType = String.format("%s", mimeType);
+                StringBuilder contentType = new StringBuilder();
+                contentType.append(mimeType);
 
                 if (bodyParams != null) {
                     /*
@@ -1522,13 +1779,13 @@ public class ImapStore extends Store {
                      * of them.
                      */
                     for (int i = 0, count = bodyParams.size(); i < count; i += 2) {
-                        contentType += String.format(";\n %s=\"%s\"",
-                                                     bodyParams.getString(i),
-                                                     bodyParams.getString(i + 1));
+                        contentType.append(String.format(";\n %s=\"%s\"",
+                                           bodyParams.getString(i),
+                                           bodyParams.getString(i + 1)));
                     }
                 }
 
-                part.setHeader(MimeHeader.HEADER_CONTENT_TYPE, contentType);
+                part.setHeader(MimeHeader.HEADER_CONTENT_TYPE, contentType.toString());
 
                 // Extension items
                 ImapList bodyDisposition = null;
@@ -1542,11 +1799,11 @@ public class ImapStore extends Store {
                     bodyDisposition = bs.getList(8);
                 }
 
-                String contentDisposition = "";
+                StringBuilder contentDisposition = new StringBuilder();
 
-                if (bodyDisposition != null && bodyDisposition.size() > 0) {
+                if (bodyDisposition != null && !bodyDisposition.isEmpty()) {
                     if (!"NIL".equalsIgnoreCase(bodyDisposition.getString(0))) {
-                        contentDisposition = bodyDisposition.getString(0).toLowerCase();
+                        contentDisposition.append(bodyDisposition.getString(0).toLowerCase(Locale.US));
                     }
 
                     if ((bodyDisposition.size() > 1)
@@ -1557,22 +1814,22 @@ public class ImapStore extends Store {
                          * about the attachment out.
                          */
                         for (int i = 0, count = bodyDispositionParams.size(); i < count; i += 2) {
-                            contentDisposition += String.format(";\n %s=\"%s\"",
-                                                                bodyDispositionParams.getString(i).toLowerCase(),
-                                                                bodyDispositionParams.getString(i + 1));
+                            contentDisposition.append(String.format(";\n %s=\"%s\"",
+                                                      bodyDispositionParams.getString(i).toLowerCase(Locale.US),
+                                                      bodyDispositionParams.getString(i + 1)));
                         }
                     }
                 }
 
-                if (MimeUtility.getHeaderParameter(contentDisposition, "size") == null) {
-                    contentDisposition += String.format(";\n size=%d", size);
+                if (MimeUtility.getHeaderParameter(contentDisposition.toString(), "size") == null) {
+                    contentDisposition.append(String.format(";\n size=%d", size));
                 }
 
                 /*
                  * Set the content disposition containing at least the size. Attachment
                  * handling code will use this down the road.
                  */
-                part.setHeader(MimeHeader.HEADER_CONTENT_DISPOSITION, contentDisposition);
+                part.setHeader(MimeHeader.HEADER_CONTENT_DISPOSITION, contentDisposition.toString());
 
 
                 /*
@@ -1741,23 +1998,11 @@ public class ImapStore extends Store {
             for (int i = 0, count = messages.length; i < count; i++) {
                 uids[i] = messages[i].getUid();
             }
-            ArrayList<String> flagNames = new ArrayList<String>();
-            for (Flag flag : flags) {
-                if (flag == Flag.SEEN) {
-                    flagNames.add("\\Seen");
-                } else if (flag == Flag.DELETED) {
-                    flagNames.add("\\Deleted");
-                } else if (flag == Flag.ANSWERED) {
-                    flagNames.add("\\Answered");
-                } else if (flag == Flag.FLAGGED) {
-                    flagNames.add("\\Flagged");
-                }
-            }
             try {
                 executeSimpleCommand(String.format("UID STORE %s %sFLAGS.SILENT (%s)",
                                                    Utility.combine(uids, ','),
                                                    value ? "+" : "-",
-                                                   Utility.combine(flagNames.toArray(new String[flagNames.size()]), ' ')));
+                                                   combineFlags(flags)));
             } catch (IOException ioe) {
                 throw ioExceptionHandler(mConnection, ioe);
             }
@@ -1828,7 +2073,7 @@ public class ImapStore extends Store {
         private List<ImapResponse> receiveCapabilities(List<ImapResponse> responses) {
             for (ImapResponse response : responses) {
                 ImapList capabilityList = null;
-                if (response.size() > 0 && ImapResponseParser.equalsIgnoreCase(response.get(0), "OK")) {
+                if (!response.isEmpty() && ImapResponseParser.equalsIgnoreCase(response.get(0), "OK")) {
                     for (Object thisPart : response) {
                         if (thisPart instanceof ImapList) {
                             ImapList thisList = (ImapList)thisPart;
@@ -1843,7 +2088,7 @@ public class ImapStore extends Store {
                 }
 
                 if (capabilityList != null) {
-                    if (capabilityList.size() > 0 && ImapResponseParser.equalsIgnoreCase(capabilityList.get(0), CAPABILITY_CAPABILITY)) {
+                    if (!capabilityList.isEmpty() && ImapResponseParser.equalsIgnoreCase(capabilityList.get(0), CAPABILITY_CAPABILITY)) {
                         if (K9.DEBUG) {
                             Log.d(K9.LOG_TAG, "Saving " + capabilityList.size() + " capabilities for " + getLogId());
                         }
@@ -1853,7 +2098,7 @@ public class ImapStore extends Store {
 //                                {
 //                                    Log.v(K9.LOG_TAG, "Saving capability '" + capability + "' for " + getLogId());
 //                                }
-                                capabilities.add(((String)capability).toUpperCase());
+                                capabilities.add(((String)capability).toUpperCase(Locale.US));
                             }
                         }
 
@@ -2163,7 +2408,7 @@ public class ImapStore extends Store {
         }
 
         protected boolean hasCapability(String capability) {
-            return capabilities.contains(capability.toUpperCase());
+            return capabilities.contains(capability.toUpperCase(Locale.US));
         }
 
         public boolean isOpen() {
@@ -2178,21 +2423,9 @@ public class ImapStore extends Store {
 //
 //                }
 //            }
-            try {
-                mIn.close();
-            } catch (Exception e) {
-
-            }
-            try {
-                mOut.close();
-            } catch (Exception e) {
-
-            }
-            try {
-                mSocket.close();
-            } catch (Exception e) {
-
-            }
+            IOUtils.closeQuietly(mIn);
+            IOUtils.closeQuietly(mOut);
+            IOUtils.closeQuietly(mSocket);
             mIn = null;
             mOut = null;
             mSocket = null;
@@ -2506,13 +2739,13 @@ public class ImapStore extends Store {
                                     ImapMessage message = new ImapMessage("" + uid, ImapFolderPusher.this);
                                     messages.add(message);
                                 }
-                                if (messages.size() > 0) {
+                                if (!messages.isEmpty()) {
                                     pushMessages(messages, true);
                                 }
 
                             } else {
                                 List<ImapResponse> untaggedResponses = null;
-                                while (storedUntaggedResponses.size() > 0) {
+                                while (!storedUntaggedResponses.isEmpty()) {
                                     if (K9.DEBUG)
                                         Log.i(K9.LOG_TAG, "Processing " + storedUntaggedResponses.size() + " untagged responses from previous commands for " + getLogId());
                                     untaggedResponses = new ArrayList<ImapResponse>(storedUntaggedResponses);
@@ -2619,10 +2852,10 @@ public class ImapStore extends Store {
             if (K9.DEBUG)
                 Log.d(K9.LOG_TAG, "UIDs for messages needing flag sync are " + flagSyncMsgSeqs + "  for " + getLogId());
 
-            if (flagSyncMsgSeqs.size() > 0) {
+            if (!flagSyncMsgSeqs.isEmpty()) {
                 syncMessages(flagSyncMsgSeqs);
             }
-            if (removeMsgUids.size() > 0) {
+            if (!removeMsgUids.isEmpty()) {
                 removeMessages(removeMsgUids);
             }
         }
@@ -2660,7 +2893,7 @@ public class ImapStore extends Store {
                         ImapMessage message = new ImapMessage("" + uid, ImapFolderPusher.this);
                         messages.add(message);
                     }
-                    if (messages.size() > 0) {
+                    if (!messages.isEmpty()) {
                         pushMessages(messages, true);
                     }
                 }
@@ -2994,7 +3227,7 @@ public class ImapStore extends Store {
                 message.parse(literal);
 
                 // Return placeholder object
-                return new Integer(1);
+                return Integer.valueOf(1);
             }
             return null;
         }
